refactor(api): remove api key auth
